// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`{allMessagesConnection{edges{cursor node{body author{username gravatarUrl}}}}} 1`] = `
Object {
  "allMessagesConnection": Object {
    "edges": Array [
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Alice",
          },
          "body": "Cats = awesome -- Alice",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Bob",
          },
          "body": "Cats = awesome -- Bob",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Cecilia",
          },
          "body": "Cats = awesome -- Cecilia",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Alice",
          },
          "body": "Dogs = awesome -- Alice",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Bob",
          },
          "body": "Dogs = awesome -- Bob",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Cecilia",
          },
          "body": "Dogs = awesome -- Cecilia",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Alice",
          },
          "body": "Postgres = awesome -- Alice",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Bob",
          },
          "body": "Postgres = awesome -- Bob",
        },
      },
      Object {
        "cursor": "424242",
        "node": Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Cecilia",
          },
          "body": "Postgres = awesome -- Cecilia",
        },
      },
    ],
  },
}
`;

exports[`{forums{name messagesConnection(...){nodes{body author{...}} edges{cursor node{body author{...}}}}}} 1`] = `
Object {
  "forums": Array [
    Object {
      "messagesConnection": Object {
        "edges": Array [
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Alice",
              },
              "body": "Cats = awesome -- Alice",
            },
          },
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Bob",
              },
              "body": "Cats = awesome -- Bob",
            },
          },
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Cecilia",
              },
              "body": "Cats = awesome -- Cecilia",
            },
          },
        ],
        "nodes": Array [
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Alice",
            },
            "body": "Cats = awesome -- Alice",
          },
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Bob",
            },
            "body": "Cats = awesome -- Bob",
          },
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Cecilia",
            },
            "body": "Cats = awesome -- Cecilia",
          },
        ],
      },
      "name": "Cats",
    },
    Object {
      "messagesConnection": Object {
        "edges": Array [
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Alice",
              },
              "body": "Dogs = awesome -- Alice",
            },
          },
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Bob",
              },
              "body": "Dogs = awesome -- Bob",
            },
          },
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Cecilia",
              },
              "body": "Dogs = awesome -- Cecilia",
            },
          },
        ],
        "nodes": Array [
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Alice",
            },
            "body": "Dogs = awesome -- Alice",
          },
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Bob",
            },
            "body": "Dogs = awesome -- Bob",
          },
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Cecilia",
            },
            "body": "Dogs = awesome -- Cecilia",
          },
        ],
      },
      "name": "Dogs",
    },
    Object {
      "messagesConnection": Object {
        "edges": Array [
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Alice",
              },
              "body": "Postgres = awesome -- Alice",
            },
          },
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Bob",
              },
              "body": "Postgres = awesome -- Bob",
            },
          },
          Object {
            "cursor": "424242",
            "node": Object {
              "author": Object {
                "gravatarUrl": null,
                "username": "Cecilia",
              },
              "body": "Postgres = awesome -- Cecilia",
            },
          },
        ],
        "nodes": Array [
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Alice",
            },
            "body": "Postgres = awesome -- Alice",
          },
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Bob",
            },
            "body": "Postgres = awesome -- Bob",
          },
          Object {
            "author": Object {
              "gravatarUrl": null,
              "username": "Cecilia",
            },
            "body": "Postgres = awesome -- Cecilia",
          },
        ],
      },
      "name": "Postgres",
    },
  ],
}
`;

exports[`{forums{name messagesList(limit,condition,includeArchived){body author{username gravatarUrl}}}} 1`] = `
Object {
  "forums": Array [
    Object {
      "messagesList": Array [
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Alice",
          },
          "body": "Cats = awesome -- Alice",
        },
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Bob",
          },
          "body": "Cats = awesome -- Bob",
        },
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Cecilia",
          },
          "body": "Cats = awesome -- Cecilia",
        },
      ],
      "name": "Cats",
    },
    Object {
      "messagesList": Array [
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Alice",
          },
          "body": "Dogs = awesome -- Alice",
        },
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Bob",
          },
          "body": "Dogs = awesome -- Bob",
        },
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Cecilia",
          },
          "body": "Dogs = awesome -- Cecilia",
        },
      ],
      "name": "Dogs",
    },
    Object {
      "messagesList": Array [
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Alice",
          },
          "body": "Postgres = awesome -- Alice",
        },
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Bob",
          },
          "body": "Postgres = awesome -- Bob",
        },
        Object {
          "author": Object {
            "gravatarUrl": null,
            "username": "Cecilia",
          },
          "body": "Postgres = awesome -- Cecilia",
        },
      ],
      "name": "Postgres",
    },
  ],
}
`;

exports[`{forums{name self{id name}}} 1`] = `
Object {
  "forums": Array [
    Object {
      "name": "Cats",
      "self": Object {
        "id": "ca700000-0000-0000-0000-000000000ca7",
        "name": "Cats",
      },
    },
    Object {
      "name": "Dogs",
      "self": Object {
        "id": "d0900000-0000-0000-0000-000000000d09",
        "name": "Dogs",
      },
    },
    Object {
      "name": "Postgres",
      "self": Object {
        "id": "bae00000-0000-0000-0000-000000000bae",
        "name": "Postgres",
      },
    },
  ],
}
`;

exports[`{forums{name}} 1`] = `
Object {
  "forums": Array [
    Object {
      "name": "Cats",
    },
    Object {
      "name": "Dogs",
    },
    Object {
      "name": "Postgres",
    },
  ],
}
`;
